--- a/static/templates/vizualizar_charge.tmpl
+++ b/static/templates/vizualizar_charge.tmpl
@@ -11,8 +11,40 @@
     .h1Uol{color:#fff;margin:0;padding-top:5px}
     .headerJc{background:#d9272e;width:100%;height:130px;margin-top:30px;position:relative}
     .logoJc,.nomeJc{color:#fff;text-align:center}
-    .headerNav{background:#a7a6a6;height:40px;display:flex;align-items:center;padding:0 15px;margin:0}
-    body{padding-top:0;margin:0;min-height:100vh;display:flex;flex-direction:column;font-family:Arial, sans-serif}
+        .headerNav {
+            background: rgb(167, 166, 166);
+            height: 40px; 
+            display: flex;
+            align-items: center; 
+            padding: 0 15px; 
+            margin: 0;
+        }
+
+		.headerNav nav ul {
+            margin: 0;
+            padding: 0;
+            list-style: none; 
+            display: flex; 
+            gap: 15px; 
+        }
+        
+        
+        .headerNav nav a {
+            text-decoration: none; 
+            color: #333; 
+            font-weight: bold;
+            font-size: 14px;
+            padding: 8px 16px; 
+            border-radius: 5px; 
+            background-color: rgba(255, 255, 255, 0.4); 
+            transition: background-color 0.2s ease, color 0.2s ease; 
+        }
+
+        .headerNav nav a:hover {
+            background-color: #333; 
+            color: white; 
+        }
+    body{padding-top:0;margin:0;min-height:100vh;display:flex;flex-direction:column;font-family:Verdana, sans-serif}
     .mainCharges{flex-grow:1;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:40px 0}
     .tituloCharge{text-align:center;margin-bottom:20px;font-size:24px;font-weight:500;color:#333}
     .containerCharge{padding:20px;background:#d9272e;border-radius:10px;box-shadow:0 4px 8px rgba(0,0,0,.1);display:flex;flex-direction:column;align-items:center;width:450px}
@@ -76,7 +108,7 @@
         min-height: 100vh; 
         display: flex;
         flex-direction: column;
-        font-family: Arial, sans-serif;
+        font-family: Verdana, sans-serif;
     }
     
     .mainCharges {
@@ -161,7 +193,15 @@
 <body>
   <header class="headerUol"><h1 class="h1Uol">Barra da Uol</h1></header>
   <header class="headerJc"><div><h1 class="logoJc">Logo do Jc</h1><h1 class="nomeJc">Sistema Jornal do Commercio de comunicação</h1></div></header>
-  <header class="headerNav"><h1>Barra de navegação</h1></header>
+	<header class="headerNav">
+		<nav>
+			<ul>
+				<li><a href="/">Início</a></li>
+				<li><a href="/charge">Charges</a></li>
+				<li><a href="/admin">Admin</a></li>
+			</ul>
+		</nav>
+	</header>
 
   <main class="mainCharges">
     <h2 class="tituloCharge">{{if .charge.Title}}Charge – {{.charge.Title}}{{else}}Charge{{end}}</h2>
