impl. do backend de crud para materias

--- a/static/templates/admin.tmpl
+++ b/static/templates/admin.tmpl
@@ -119,7 +119,7 @@
       <article class="cardAcao">
         <h3>Escrever Matérias</h3>
         <p class="acaoDescricao">Criar uma nova matéria para publicação.</p>
-        <a href="/admin/articles/new">
+        <a href="/admin/materia">
           <button class="btnPrimario" aria-label="Escrever Matérias">Acessar</button>
         </a>
       </article>
@@ -128,7 +128,7 @@
       <article class="cardAcao">
         <h3>Editar Matérias</h3>
         <p class="acaoDescricao">Listar e editar matérias já criadas.</p>
-        <a href="/admin/articles">
+        <a href="/admin/materias">
           <button class="btnPrimario" aria-label="Editar Matérias">Acessar</button>
         </a>
       </article>
