--- a/static/templates/escrever_materia.tmpl
+++ b/static/templates/escrever_materia.tmpl
@@ -6,13 +6,14 @@
 		<title>Escrever matéria</title>
 	</head>
 	<body>
-		<form>
+		<form method='POST' action='/admin/materia'>
 			<label for="title">Titulo:</label>
 			<input type="text" name="title">	
 			<label for="author">Autor:</label>
 			<input type="text" name="author">	
 			<label for="body">Body:</label>
 			<input type="text" name="body">	
+			<button type="submit">Enviar</button>
 		</form>	
 	</body>
 </html>
