--- a/static/templates/adicionar_charge.tmpl
+++ b/static/templates/adicionar_charge.tmpl
@@ -174,7 +174,7 @@
         <div class="form-container">
             <h2>Enviar Nova Charge</h2>
             
-			<form action="/admin/charge" method="POST" enctype="multipart/form-data">
+			<form action="/admin/api/charge" method="POST" enctype="multipart/form-data">
 				<div>
 					<label for="title">Título da Charge:</label>
 					<input type="text" id="title" name="title" required>
