--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -39,7 +39,6 @@
 
         <!-- META TAGS -->
         <meta name="HandheldFriendly" content="True">
-
         <meta name="application-name" content="JC">
         <meta name="msapplication-TileColor" content="#fff">
         <meta name="theme-color" content="#da291c">
@@ -53,10 +52,10 @@
     <link rel="preconnect" href="https://imagens.ne10.uol.com.br">
     <link rel="preconnect" href="https://cdn.privacytools.com.br">
 
-    <link rel="stylesheet" href="C:\Users\Lucas\Desktop\Teste\style.css">
+    <link rel="stylesheet" href="static/templates/Styles/style.css">
 
     <!-- Web Fonts -->
-    <link rel="stylesheet" href="C:\Users\Lucas\Desktop\Teste\style.css">
+    <link rel="stylesheet" href="static/templates/Styles/style.css">
 
     <link rel="canonical" href="https://jc.uol.com.br" />
 
@@ -75,9 +74,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/jc/favicon/favicon-16x16.png">
 
     <!-- privacytools -->
-    <link rel="stylesheet" href="C:\Users\Lucas\Desktop\Teste\privacytools.css" media="print" onload="this.onload=null;this.media='all'">
+    <link rel="stylesheet" href="static\templates\Styles\privacytools.css" media="print" onload="this.onload=null;this.media='all'">
     <noscript>
-        <link rel="stylesheet" href="C:\Users\Lucas\Desktop\Teste\privacytools2.css">
+        <link rel="stylesheet" href="static\templates\Styles\privacytools2.css">
     </noscript>
 
     <!-- FEED DE NOTICIAS PARA O DISCOVER-->
@@ -151,14 +150,14 @@
                 <div class="row">
                     <div class="col-xs-4 col-md-4">
                         <a href="https://impresso.jc.uol.com.br/index.php?id=/banca.php&utm_source=site_jc&utm_medium=imagem_capa&utm_campaign=chama_flip" class="edition">
-                            <img width="106" height="91" src="C:\Users\Lucas\Desktop\Teste\imgs\edicao.webp" alt="Leia aqui a edição de hoje">
+                            <img width="106" height="91" src="static/templates/imgs/edicao.webp" alt="Leia aqui a edição de hoje">
                             <h5>Edição do dia</h5>
                         </a>
                     </div>
                     <div class="col-xs-4 col-md-4">
                         <a href="/" class="logo">
                             <figure>
-                                <img width="140" height="70" src="C:\Users\Lucas\Desktop\Teste\imgs\logo.svg" alt="JC" title="JC">
+                                <img width="140" height="70" src="static/templates/imgs/logo.svg" alt="JC" title="JC">
                                     <figcaption>Jornal do Commercio</figcaption>
                             </figure>
                         </a>
@@ -169,10 +168,10 @@
                                 Publicidade legal
                             </a>
                             <a href="#" class="toggle-menu-sidebar-menu-jc">
-                                <img width="25" height="20" src="C:\Users\Lucas\Desktop\Teste\imgs\icon-menu.svg" alt="menu" title="menu">
+                                <img width="25" height="20" src="static/templates/imgs/icon-menu.svg" alt="menu" title="menu">
                             </a>
                              <a href="#" class="toggle-search">
-                                <img width="18" height="20" src="C:\Users\Lucas\Desktop\Teste\imgs\icon-busca.svg" alt="busca" title="busca">
+                                <img width="18" height="20" src="static/templates/imgs/icon-busca.svg" alt="busca" title="busca">
                             </a>
                         </div>
                     </div>
@@ -183,7 +182,7 @@
         <div class="searchbar">
     <form action="/search">
         <input type="text" name="q" placeholder="Faça a sua pesquisa" value="" required>
-        <button type="submit"><img width="13" height="16" src="C:\Users\Lucas\Desktop\Teste\imgs\icon-busca.svg" alt="busca" ></button>
+        <button type="submit"><img width="13" height="16" src="static/templates/imgs/icon-busca.svg" alt="busca" ></button>
     </form>
     <a href="#" class="closeSearch">
         fechar
@@ -197,7 +196,7 @@
     <div class="search-sidebar">
         <form action="/search">
             <input type="text" name="q" placeholder="Pesquise" value="" required>
-            <button type="submit"><img width="13" height="16" src="C:\Users\Lucas\Desktop\Teste\imgs\icon-busca.svg" alt="busca"></button>
+            <button type="submit"><img width="13" height="16" src="static/templates/imgs/icon-busca.svg" alt="busca"></button>
         </form>
     </div>
     <div class="side-scroll scroll-JC">
@@ -291,7 +290,7 @@
     <li>
         <a href="https://www.facebook.com/jornaldocommercioPE/" target="_blank">
             <figure>
-                <img loading="lazy" width="30" height="30" src="C:\Users\Lucas\Desktop\Teste\imgs\icon-facebook.svg" alt="icone-facebook">
+                <img loading="lazy" width="30" height="30" src="imgs/icon-facebook.svg" alt="icone-facebook">
                 <figcaption>Facebook</figcaption>  
             </figure>
         </a>
